--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
     <a href="/">Dallas Geek Night</a>
     <a class="extra" href="/">home</a>
     <a class="extra" href="/about.html">about</a>
+    <a class="extra" href="/location.html">about</a>
     <a class="extra" href="/previous/">previous events</a>
   </div>
   
