--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,13 @@
   {{ content }}
   
   <div class="footer">
+	<div class="tw">
+		<a href="http://thoughtworks.com">
+		  <img src="/images/tw_sm.png"/>
+		  <p>We've pioneered Agile in the Enterprise for a decade</p>
+		</a>
+	</div>
+	
     <div class="contact">
       <p>
         By <a href="http://thoughtworks.com">ThoughtWorkers</a><br />
