--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,22 +27,16 @@
   
   {{ content }}
   
-  <div class="footer">
-	<div class="tw">
-		<a href="http://thoughtworks.com">
-		  <img src="/images/tw_sm.png"/>
-		  <p>We've pioneered Agile in the Enterprise for a decade</p>
-		</a>
-	</div>
-	
+  <div class="footer">	
     <div class="contact">
       <p>
-        By <a href="http://thoughtworks.com">ThoughtWorkers</a><br />
+        By <a href="http://thoughtworks.com"><img src="/images/tw_sm.png"/></a><br />
         many@dallasgeeknight.com<br />
       </p>
     </div>
     <div class="attending">
       <p>
+	    Attending? RSVP here please:
         <a href="http://www.meetup.com/Geeknight-Dallas/">http://www.meetup.com/Geeknight-Dallas/</a><br />
       </p>
     </div>
