--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
   <div class="footer">	
     <div class="contact">
       <p>
-        By <a href="http://thoughtworks.com"><img src="/images/tw_sm.png"/></a><br />
-        many@dallasgeeknight.com<br />
+        By <a href="http://thoughtworks.com"><img align="center" src="/images/tw_sm.png"/></a><br />
+        and many@dallasgeeknight.com<br />
       </p>
     </div>
     <div class="attending">
