--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <link href="http://feeds.feedburner.com/dallasgeeknight" rel="alternate" title="Dall Geek Night" type="application/atom+xml" />
+   <link href="http://feeds.feedburner.com/dallasgeeknight" rel="alternate" title="Dallas Geek Night" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -31,7 +31,7 @@
     <div class="contact">
       <p>
         By <a href="http://thoughtworks.com"><img align="center" src="/images/tw_sm.png"/></a><br />
-        and many@dallasgeeknight.com<br />
+        and friends<br />
       </p>
     </div>
     <div class="attending">
