--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <a href="/">Dallas Geek Night</a>
     <a class="extra" href="/">home</a>
     <a class="extra" href="/about.html">about</a>
-    <a class="extra" href="/location.html">about</a>
+    <a class="extra" href="/location.html">location</a>
     <a class="extra" href="/previous/">previous events</a>
   </div>
   
@@ -36,8 +36,8 @@
     </div>
     <div class="attending">
       <p>
-	    Attending? RSVP here please:
-        <a href="http://www.meetup.com/Geeknight-Dallas/">http://www.meetup.com/Geeknight-Dallas/</a><br />
+	    Attending? RSVP on <a href="http://www.meetup.com/Geeknight-Dallas/">Meetup.com</a> please:
+        <br />
       </p>
     </div>
     <div class="rss">
