future and previous stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     <a class="extra" href="/about.html">about</a>
     <a class="extra" href="/location.html">location</a>
     <a class="extra" href="/previous/">previous events</a>
+    <a class="extra" href="/future/">future events</a>
   </div>
   
   {{ content }}
@@ -39,11 +40,6 @@
 	    Attending? RSVP on <a href="http://www.meetup.com/Geeknight-Dallas/">Meetup.com</a> please:
         <br />
       </p>
-    </div>
-    <div class="rss">
-      <a href="http://feeds.feedburner.com/dallasgeeknight">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
     </div>
   </div>
 </div>
