--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     </div>
     <div class="attending">
       <p>
-	    Attending? RSVP on <a href="http://www.meetup.com/Geeknight-Dallas/">Meetup.com</a> please:
+	    Attending? RSVP on <a href="http://www.meetup.com/Geeknight-Dallas/">Meetup.com</a> please.
         <br />
       </p>
     </div>
