--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <a href="/">Dallas Geek Night</a>
     <a class="extra" href="/">home</a>
     <a class="extra" href="/about.html">about</a>
-    <a class="extra" href="/location.html">location</a>
+    <a class="extra" href="/getting-there.html">getting there</a>
     <a class="extra" href="/previous/">previous events</a>
     <a class="extra" href="/future/">future events</a>
   </div>
